unpackaged/main/default/objects/Clinical_Trial_Condition__c/Clinical_Trial_Condition__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial Condition</label>
    <nameField>
        <displayFormat>CTCID-{0000}</displayFormat>
        <label>Clinical Trial Condition Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>