unpackaged/main/default/objects/Clinical_Trial_Condition__c/fields/Advanced_Condition__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Condition__c</fullName>
    <formula>Condition__r.Advanced_Condition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advanced Condition?</label>
    <type>Checkbox</type>
</CustomField>