unpackaged/main/default/objects/Clinical_Trial_Condition__c/fields/Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial__c</fullName>
    <label>Clinical Trial</label>
    <referenceTo>Clinical_Trial__c</referenceTo>
    <relationshipLabel>Clinical Trial Conditions</relationshipLabel>
    <relationshipName>Clinical_Trial_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>