unpackaged/main/default/objects/Clinical_Trial_Condition__c/fields/Clinical_Trial_Condition_Key__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Condition_Key__c</fullName>
    <description>used to ensure the Combination of Clinical Trial and Condition is unique</description>
    <externalId>true</externalId>
    <label>Clinical Trial Condition Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>