unpackaged/main/default/objects/Clinical_Trial_Condition__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition</label>
    <referenceTo>NLM_Condition__c</referenceTo>
    <relationshipName>Study_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>