unpackaged/main/default/objects/Clinical_Trial_Condition__c/fields/Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>Condition_Name__c</fullName>
    <formula>Condition__r.MeSH_Heading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Name</label>
    <type>Text</type>
</CustomField>