unpackaged/main/default/objects/Clinical_Trial_Condition__c/fields/Readable_Clinical_Trial_Name__c.field-meta.xml
<CustomField>
    <fullName>Readable_Clinical_Trial_Name__c</fullName>
    <formula>IF (  ISBLANK(Clinical_Trial__r.Readable_Title__c) ,  Clinical_Trial__r.Brief_Title__c , Clinical_Trial__r.Readable_Title__c)</formula>
    <label>Readable Clinical Trial Name</label>
    <type>Text</type>
</CustomField>